--- a/layouts/shortcodes/conference-deadlines.gohtml
+++ b/layouts/shortcodes/conference-deadlines.gohtml
@@ -1,4 +1,4 @@
-{{- $conferenceSlugs := collections.Dictionary "aaai" "AI" "acl" "AI" "coling" "AI" "emnlp" "AI" "icml" "AI" "ijcai" "AI" "naacl" "AI" "cikm" "DB" "ecir" "DB" "sigir" "DB" "wsdm" "DB" "chi" "HI" "www" "MX" -}}
+{{- $conferenceSlugs := collections.Dictionary "aaai" "AI" "acl" "AI" "coling" "AI" "emnlp" "AI" "iclr" "AI" "icml" "AI" "ijcai" "AI" "naacl" "AI" "nips" "AI" "cikm" "DB" "ecir" "DB" "sigir" "DB" "wsdm" "DB" "chi" "HI" "www" "MX" -}}
 {{- $deadlineType := collections.Dictionary "deadline" "Submission" "abstract_deadline" "Abstract" -}}
 {{- $invalidDeadlineKeys := collections.Slice "comment" -}}
 {{- $invalidDeadlineStrings := collections.Slice "TBD" -}}
