--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -267,6 +267,7 @@ body {
             max-width: none;
 
             h1 {
+                text-align: center;
                 font-size: calc($font-size * 2 * 100vw / $body-max-width);
 
                 @media (max-width: $body-max-width) {
@@ -279,6 +280,7 @@ body {
             }
 
             p:nth-of-type(1), p:nth-of-type(2) {
+                text-align: center;
                 font-size: calc($font-size * 100vw / $body-max-width);
 
                 @media (max-width: $body-max-width) {
