--- a/assets/css/fonts/_fontawesome.scss
+++ b/assets/css/fonts/_fontawesome.scss
@@ -1,6 +1,8 @@
 
-$fa-font-path: "/fonts";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/brands";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/solid";
-@import "../node_modules/@fortawesome/fontawesome-free/scss/regular";
+@use "../node_modules/@fortawesome/fontawesome-free/scss/_variables" with (
+    $font-path: "/fonts"
+);
+@use "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+@use "../node_modules/@fortawesome/fontawesome-free/scss/brands";
+@use "../node_modules/@fortawesome/fontawesome-free/scss/solid";
+@use "../node_modules/@fortawesome/fontawesome-free/scss/regular";
